<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Failover</string>
    <string name="monitor_status">Monitor Status</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="worker_url">Worker URL</string>
    <string name="worker_secret">Worker Secret</string>
    <string name="hotspot_ssid">Phone Hotspot SSID</string>
    <string name="polling_interval">Polling Interval (seconds)</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="information">Information</string>
    <string name="enable_device_admin">Enable Device Admin</string>
    <string name="test_failover">Test Failover (Manual)</string>
    <string name="accessibility_service_description">Enables automatic hotspot toggle when failover is triggered</string>
</resources>
